[package]
name = "rsa"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

[dependencies]
rand = "0.6"
failure = "0.1"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.num-bigint]
version = "0.2.2"
features = ["rand"]
