[package]
name = "rsa"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

[dependencies]
log = "0.4.6"
rand = "0.6"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0.7"
pretty_env_logger = "0.3.0"
quicli = "0.4.0"
structopt = "0.2.15"
base64 = "0.10.1"
num-traits = "0.2"

[dependencies.num-bigint]
version = "0.2"
features = ["rand", "serde"]
