[package]
name = "rsa"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

[dependencies]
log = "0.4.6"
rand = "0.6"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0.7"
pretty_env_logger = "0.3.0"
quicli = "0.4.0"
structopt = "0.2.15"
base64 = "0.10.1"
num-traits = "0.2"
num-integer = "0.1.39"
termcolor = "1.0.4"
textwrap = "0.11.0"
regex = "1.1.6"
line-wrap = "0.1.1"
rayon = "1.0.3"
bincode = "1.1.3"

[dependencies.num-bigint]
version = "0.2"
features = ["rand", "serde"]
